--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-@media (max-width: 900px) { body { padding-bottom: 64px; } }
+@media (max-width: 960px) { body { padding-bottom: 58px; } }
 
 a { color: inherit; text-decoration: none; }
 img { display: block; max-width: 100%; }
